--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -181,7 +181,7 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/enable-corepack@dev
 
     - name: Build and Static Code Analysis
-      uses: Lombiq/GitHub-Actions/.github/actions/build-dotnet@issue/HAST-290
+      uses: Lombiq/GitHub-Actions/.github/actions/build-dotnet@dev
       with:
         directory: ${{ inputs.build-directory }}
         configuration: ${{ inputs.build-configuration}}
@@ -205,7 +205,7 @@ jobs:
 
     - name: Tests
       if: inputs.test-disable == 'false'
-      uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@issue/HAST-290
+      uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@dev
       with:
         build-directory: ${{ inputs.build-directory }}
         solution-path: ${{ inputs.build-solution-path }}
