--- a/.github/workflows/msbuild-and-test.yml
+++ b/.github/workflows/msbuild-and-test.yml
@@ -26,6 +26,17 @@ on:
         type: string
         default: .
         description: Path to the directory where a solution file can be found.
+      solution-or-project-path:
+        required: false
+        type: string
+        default: "*.sln"
+        description: >
+          The path of the solution or project file to be built. If you have exactly one .sln file in the current directory
+          then this can be omitted. Otherwise make sure to specify it to avoid an "MSB1008: Only one project can be
+          specified." error that is thrown when the `*.sln` wildcard results in multiple files. To build a project file you
+          must specify a path that ends with `.csproj`. An example: "./src/*Web/*.Web.csproj". The value is given to
+          PowerShell's `Get-ChildItem` cmdlet as-is, so grepping is still possible but a name with spaces must be escaped
+          separately.
       build-verbosity:
         required: false
         type: string
@@ -83,6 +94,7 @@ jobs:
         uses: Lombiq/GitHub-Actions/.github/actions/msbuild@dev
         with:
           directory: ${{ inputs.build-directory }}
+          solution-or-project-path: ${{ inputs.solution-or-project-path }}
           verbosity: ${{ inputs.build-verbosity }}
           enable-code-analysis: ${{ inputs.build-enable-code-analysis }}
 
