--- a/.github/workflows/swap-azure-web-app-slots.yml
+++ b/.github/workflows/swap-azure-web-app-slots.yml
@@ -30,15 +30,15 @@ on:
         type: string
         default: Staging
         description: >
-          The slot name of the web app you want to swap the destination web app with. What you see at the top of the
-          blade on the Azure Portal, when you open the slot, before the app name in parenthesis.
+          The slot name of the web app you want to swap the destination slot (of the same web app) with. What you see at
+          the top of the blade on the Azure Portal, when you open the slot, before the app name in parenthesis.
       destination-slot-name:
         required: false
         type: string
         default: Production
         description: >
-          The slot name of the web app you want to swap. What you see at the top of the blade on the Azure Portal,
-          when you open the slot, before the app name in parenthesis.
+          The slot name of the web app you want to swap with the source slot (of the same web app). What you see at the
+          top of the blade on the Azure Portal, when you open the slot, before the app name in parenthesis.
       resource-group-name:
         required: true
         type: string
