--- a/.github/workflows/swap-azure-web-app-slots.yml
+++ b/.github/workflows/swap-azure-web-app-slots.yml
@@ -14,7 +14,7 @@ on:
       machine-type:
         required: false
         type: string
-        default: ubuntu-latest
+        default: ubuntu-22.04
         description: The name of the type of machine to run the workflow under.
       timeout-minutes:
         required: false
@@ -69,11 +69,6 @@ jobs:
     - name: Initialize PowerShell modules
       uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@dev
 
-    - name: Add Azure Application Insights Release Annotation
-      uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
-      with:
-        application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
-
     - name: Test Source Web App Slot
       run: |
         Test-AzureWebApp `
@@ -95,6 +90,11 @@ jobs:
           -ResourceGroupName ${{ inputs.resource-group-name }} `
           -WebAppName ${{ inputs.app-name }} `
           -SlotName ${{ inputs.destination-slot-name }}
+
+    - name: Add Azure Application Insights Release Annotation
+      uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
+      with:
+        application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
 
     - name: Cancel Workflow on Failure
       if: failure() && inputs.cancel-workflow-on-failure == 'true'
