--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -169,13 +169,11 @@ jobs:
           --self-contained ${{ inputs.self-contained }} `
           -p:PublishReadyToRun=${{ inputs.ready-to-run }} `
           ${{ steps.set-up-runtime-option.outputs.runtime-option }}
-        
+
     - name: Login to Azure
-      # v1.4.6
-      uses: azure/login@92a5484dfaf04ca78a94597f4f19fea633851fa2
+      uses: Lombiq/GitHub-Actions/.github/actions/login-to-azure@issue/NEST-337
       with:
-        creds: ${{ secrets.AZURE_APP_SERVICE_DEPLOYMENT_SERVICE_PRINCIPAL }}
-        enable-AzPSSession: true
+        service-principal: ${{ secrets.AZURE_APP_SERVICE_DEPLOYMENT_SERVICE_PRINCIPAL }}
 
     - name: Initialize PowerShell modules
       uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@dev
