--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -47,7 +47,7 @@ on:
         description: Repository with default configuration to use, the default from Check Spelling is ''
         required: false
         type: string
-        default: Lombiq/GitHub-Actions@dev
+        default: Lombiq/GitHub-Actions@issue/NEST-369
 
 jobs:
   check-spelling:
@@ -63,7 +63,7 @@ jobs:
           "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
 
       - name: Checkout
-        uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
+        uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/NEST-369
         with:
           token: ${{ env.CHECKOUT_TOKEN }}
 
@@ -79,7 +79,7 @@ jobs:
           git commit -m 'stub commit -- includes submodules'
 
       - name: Check Spelling
-        uses: Lombiq/GitHub-Actions/.github/actions/spelling@dev
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/NEST-369
         with:
           dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
           extra-dictionaries: ${{ inputs.extra-dictionaries }}
@@ -88,6 +88,6 @@ jobs:
 
       - name: Cancel Workflow on Failure
         if: failure() && inputs.cancel-workflow-on-failure == 'true'
-        uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@dev
+        uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@issue/NEST-369
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
