--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -3,10 +3,16 @@ name: Deploy to Azure App Service
 on:
   workflow_call:
     secrets:
+      CHECKOUT_TOKEN:
+        required: false
+        description: >
+          The GitHub token to authenticate checkout. Pass in a GitHub personal access token if authenticated submodules
+          are used.
       AZURE_APP_SERVICE_DEPLOYMENT_SERVICE_PRINCIPAL:
         required: true
       AZURE_APP_SERVICE_PUBLISH_PROFILE:
         required: true
+
     inputs:
       cancel-workflow-on-failure:
         description: When set to "true", will cancel the current workflow run with all jobs if this workflow fails.
@@ -124,6 +130,8 @@ jobs:
     steps:
     - name: Checkout
       uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
+      with:
+        token: ${{ env.CHECKOUT_TOKEN }}
 
     - name: Set up .NET
       uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
