You don't need to use quotes here.

--- a/.github/workflows/post-pull-request-checks-automation.yml
+++ b/.github/workflows/post-pull-request-checks-automation.yml
@@ -36,7 +36,7 @@ on:
           "merge_method" for applicable values: https://docs.github.com/en/rest/pulls/pulls?apiVersion=2022-11-28#merge-a-pull-request
         required: false
         type: string
-        default: "merge"
+        default: merge
 
 jobs:
   post-pull-request-checks-automation:
