--- a/.github/workflows/build-and-test-dotnet.yml
+++ b/.github/workflows/build-and-test-dotnet.yml
@@ -134,23 +134,23 @@ jobs:
         "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
 
     - name: Checkout
-      uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/OSOE-508
       with:
         token: ${{ env.CHECKOUT_TOKEN }}
 
     - name: Set up .NET
-      uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@issue/OSOE-508
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
 
     - name: Verify that .NET packages are consolidated
       if: ${{ inputs.verify-dotnet-consolidation }}
-      uses: Lombiq/GitHub-Actions/.github/actions/verify-dotnet-consolidation@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/verify-dotnet-consolidation@issue/OSOE-508
       with:
         directory: ${{ inputs.build-directory }}
 
     - name: Build and Static Code Analysis
-      uses: Lombiq/GitHub-Actions/.github/actions/build-dotnet@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/build-dotnet@issue/OSOE-508
       with:
         directory: ${{ inputs.build-directory}}
         configuration: ${{ inputs.build-configuration}}
@@ -163,7 +163,7 @@ jobs:
 
     - name: Tests
       if: inputs.test-disable == 'false'
-      uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@issue/OSOE-508
       with:
         build-directory: ${{ inputs.build-directory }}
         solution-path: ${{ inputs.build-solution-path }}
@@ -173,6 +173,6 @@ jobs:
 
     - name: Cancel Workflow on Failure
       if: failure() && inputs.cancel-workflow-on-failure == 'true'
-      uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@issue/OSOE-508
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
