--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -186,7 +186,7 @@ jobs:
         enable-AzPSSession: true
 
     - name: Initialize PowerShell modules
-      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/OSOE-508
+      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@dev
 
     - name: Stop Web App Slot
       run: |
