--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -14,7 +14,15 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Set Checkout Token
+      shell: pwsh
+      env:
+        CHECKOUT_TOKEN: ${{ inputs.token }}
+      run: |
+        $checkoutToken = $Env:CHECKOUT_TOKEN ? $Env:CHECKOUT_TOKEN : "${{ github.token }}"
+        "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
+
     - uses: actions/checkout@v3.1.0
       with:
-        submodules: 'recursive'
-        token: ${{ inputs.token }}
+        submodules: "recursive"
+        token: ${{ env.CHECKOUT_TOKEN }}
