--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -19,7 +19,7 @@ runs:
       env:
         CHECKOUT_TOKEN: ${{ inputs.token }}
       run: |
-        $checkoutToken = $Env:CHECKOUT_TOKEN ? $Env:CHECKOUT_TOKEN : "${{ github.token }}"
+        $checkoutToken = $Env:CHECKOUT_TOKEN ? $Env:CHECKOUT_TOKEN : $Env:GITHUB_TOKEN
         "CHECKOUT_TOKEN=$checkoutToken" >> $Env:GITHUB_ENV
 
     - uses: actions/checkout@v3.1.0
