And now correctly

--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Ensure Parent PR Exists
         if: github.event.pull_request != ''
         uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@issue/OSOE-506
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           title: ${{ github.event.pull_request.title }}
           repository: ${{ inputs.repository }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
