--- a/.github/actions/verify-submodule-pull-request/action.yml
+++ b/.github/actions/verify-submodule-pull-request/action.yml
@@ -15,11 +15,16 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Setup Scripts
+    - name: Setup and Print PR Title
       shell: pwsh
       run: |
+        Write-Output "Pull Request Title: ${{ inputs.title }}"
+
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
         (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
+
+        New-Item -ItemType File -Force $Profile | Out-Null
+        Get-Content -Raw ${{ github.action_path }}/functions.ps1 >> $Profile
 
     - name: Ensure Parent Repository Contains Matching PR
       shell: pwsh
