--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -131,7 +131,7 @@ jobs:
     - name: Checkout
       uses: Lombiq/GitHub-Actions/.github/actions/checkout@issue/OSOE-508
       with:
-        token: ${{ env.CHECKOUT_TOKEN }}
+        token: ${{ secrets.CHECKOUT_TOKEN }}
 
     - name: Set up .NET
       uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@issue/OSOE-508
