--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -47,6 +47,13 @@ on:
         description: >
           The desired NuGet package version used for publishing. If not specified, the GITHUB_REF_NAME environment
           variable is used which is suitable if the version is derived from a git tag.
+      nuget-artifact-retention-days:
+        required: false
+        type: string
+        default: "14"
+        description: >
+          Duration in days after which the artifact of the NuGet package publishing (if any) will expire. See
+          https://github.com/actions/upload-artifact#retention-period for more details
     secrets:
       # We can't access org secrets here so they need to be passed in.
       API_KEY:
@@ -78,6 +85,7 @@ jobs:
         dotnet-pack-ignore-warning: ${{ inputs.dotnet-pack-ignore-warning }}
         dotnet-pack-include-symbols: ${{ inputs.dotnet-pack-include-symbols }}
         publish-version: ${{ inputs.publish-version }}
+        nuget-artifact-retention-days: ${{ inputs.nuget-artifact-retention-days }}
       env:
         API_KEY: ${{ secrets.API_KEY }}
 
