--- a/.github/actions/publish-nuget/action.yml
+++ b/.github/actions/publish-nuget/action.yml
@@ -32,7 +32,7 @@ inputs:
     default: "14"
     description: >
       Duration in days after which the artifact of the NuGet package publishing (if any) will expire. See
-      https://github.com/actions/upload-artifact#retention-period for more details
+      https://github.com/actions/upload-artifact#retention-period for more details.
 
 runs:
   using: "composite"
