--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Checkout
       uses: Lombiq/GitHub-Actions/.github/actions/checkout@dev
       with:
-        token: ${{ env.CHECKOUT_TOKEN }}
+        token: ${{ secrets.CHECKOUT_TOKEN }}
 
     - name: Set up .NET
       uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
