--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Ensure Parent PR Exists
         if: github.event.pull_request != ''
-        uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@issue/OSOE-506
+        uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
