--- a/.github/actions/add-jira-issue-code-to-pull-request/action.yml
+++ b/.github/actions/add-jira-issue-code-to-pull-request/action.yml
@@ -18,7 +18,7 @@ runs:
       shell: pwsh
       env:
         PR_TITLE: ${{ github.event.pull_request.title }}
-        PR_BODY: ${{ github.event.pull_request.body }
+        PR_BODY: ${{ github.event.pull_request.body }}
       run: |
         $params = @{
             JiraBaseUrl = $Env:JIRA_BASE_URL ? $Env:JIRA_BASE_URL : "https://lombiq.atlassian.net"
