Update branch selectors.

--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -80,6 +80,6 @@ jobs:
 
       - name: Cancel Workflow on Failure
         if: failure() && inputs.cancel-workflow-on-failure == 'true'
-        uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@dev
+        uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@issue/OSOE-507
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
